@@ -16,7 +16,6 @@ import org.springframework.web.filter.CorsFilter;
 
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.List;
 
 import static org.springframework.security.config.Customizer.withDefaults;
 
@@ -41,7 +40,7 @@ public class SecurityConfig {
                         .authenticationEntryPoint(new HttpStatusEntryPoint(HttpStatus.UNAUTHORIZED))
                 )
                 .oauth2Login(oauth2 -> oauth2
-                        .defaultSuccessUrl(environment.getProperty("CLIENT_ORIGIN") + "/", true)
+                        .defaultSuccessUrl(environment.getProperty("CLIENT_ORIGIN") + "/login", true)
                         .failureUrl(environment.getProperty("CLIENT_ORIGIN") + "/error") // Redirect on failure
                 )
                 .logout(logout -> logout
@@ -63,8 +62,8 @@ public class SecurityConfig {
         config.setAllowedOrigins(Collections.singletonList(clientOrigin));
         config.setAllowCredentials(true);
         config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Access-Control-Allow-Origin")); // Common headers
-        config.setExposedHeaders(List.of("Authorization"));
+        config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
+        config.setExposedHeaders(Arrays.asList("Authorization", "Content-Type"));
         source.registerCorsConfiguration("/**", config);
         return new CorsFilter(source);
     }
